testando app.js

--- a/consulta.html
+++ b/consulta.html
@@ -13,7 +13,7 @@
 
     <!-- Font Awesome -->
     <script defer src="https://use.fontawesome.com/releases/v5.0.8/js/all.js"></script>
-
+    <script src="app.js"></script>
 	</head>
 
   <body>
