--- a/index.html
+++ b/index.html
@@ -108,6 +108,57 @@
         </div>
       </div>
     </div>
+
+
+        <!-- Button trigger modal 
+    <button type="button" class="btn btn-primary" data-toggle="modal" data-target="#erroGravacao">
+      Launch demo modal
+    </button>
+    -->
+
+    <!-- Modal ERRO   -->
+    <div class="modal fade" id="erroGravacao" tabindex="-1" role="dialog" aria-labelledby="exampleModalLabel" aria-hidden="true">
+      <div class="modal-dialog" role="document">
+        <div class="modal-content">
+          <div class="modal-header text-danger">
+            <h5 class="modal-title" id="exampleModalLabel">Erro na gravação</h5>
+            <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+              <span aria-hidden="true">&times;</span>
+            </button>
+          </div>
+          <div class="modal-body">
+            Existem campos obrigatórios que não foram preenchidos.
+          </div>
+          <div class="modal-footer">
+           
+            <button type="button" class="btn btn-danger" data-dismiss="modal">Voltar e corrigir</button>
+          </div>
+        </div>
+      </div>
+    </div>
+
+
+
+    <!-- Modal SUCESSO-->
+    <div class="modal fade" id="sucessoGravacao" tabindex="-1" role="dialog" aria-labelledby="exampleModalLabel" aria-hidden="true">
+      <div class="modal-dialog" role="document">
+        <div class="modal-content">
+          <div class="modal-header text-success">
+            <h5 class="modal-title" id="exampleModalLabel">Sucesso na gravação</h5>
+            <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+              <span aria-hidden="true">&times;</span>
+            </button>
+          </div>
+          <div class="modal-body">
+            Despesa foi cadastrada com sucesso.
+          </div>
+          <div class="modal-footer">
+           
+            <button type="button" class="btn btn-success" data-dismiss="modal">Voltar</button>
+          </div>
+        </div>
+      </div>
+    </div>
   </body>	
 
 </html>
